--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 </head>
 <body>
     <header>
-       <h1>Witchcraft Weather</h1>
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <h1>Witchcraft Weather</h1>
+        </div>
+      </div>
     </header> 
+<section id="top-item">
   <div class="container">
         <div class="row finder ">
             <div class="col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center form">
-             
-                <form action="" id="search">
+               <form action="" id="search">
                     <label for="city-search">
                       <input id="city-search" type="text" name="search-city" placeholder="e.g. Santiago, Chile" required>
                       <button type="button" id="btn-search" class="btn btn-default btn-md">Search City</button>
@@ -27,10 +31,13 @@
             </div>
         </div>
     </div>
-<div class="container bewitched "></div>
-<!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+    <!--Wheather box-->
+    <div class="container bewitched "></div>
+    <!-- Modal -->
+    <div id="mdl"></div>
+</section>
+
+        
 <!--scripts-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNq_UtOGDu7Veg1yGzIgG4nJJ6Umv6o8M&libraries=places,geometry"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
