--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Witchcraft Weather</title>
-<link rel="shortcut icon" type="image" href="assets/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image" href="assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Chau+Philomene+One" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <h1>Witchcraft Weather</h1>
-        </div>
-      </div>
-    </header> 
-<section id="top-item">
-  <div class="container">
-        <div class="row finder ">
-            <div class="col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center form">
-               <form action="" id="search">
-                    <label for="city-search">
-                      <input id="city-search" type="text" name="search-city" placeholder="e.g. Santiago, Chile" required>
-                      <button type="button" id="btn-search" class="btn btn-default btn-md">Search City</button>
-                    </label>
-                </form>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <h1>Witchcraft Weather</h1>
             </div>
         </div>
-    </div>
-    <!--Wheather box-->
-    <div class="container bewitched "></div>
-    <!-- Modal -->
-    <div id="mdl"></div>
-</section>
+    </header>
+    <section id="top-item">
+        <div class="container">
+            <div class="row finder ">
+                <div class="col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center form">
+                    <form action="" id="search">
+                        <label for="city-search">
+                            <input id="city-search" type="text" name="search-city" placeholder="e.g. Santiago, Chile" required>
+                            <button type="button" id="btn-search" class="btn btn-default btn-md">Search City</button>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!--Wheather box-->
+        <div class="container bewitched "></div>
+        <!-- Modal -->
+        <div id="mdl"></div>
+    </section>
 
-        
-<!--scripts-->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNq_UtOGDu7Veg1yGzIgG4nJJ6Umv6o8M&libraries=places,geometry"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="assets/js/app.js"></script>    
+
+    <!--scripts-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNq_UtOGDu7Veg1yGzIgG4nJJ6Umv6o8M&libraries=places,geometry"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/app.js"></script>
 </body>
-</html>
 
+</html>
